@@ -606,29 +606,55 @@ class Calendar:
             return (sourceTime, sourceTime, True)
 
 
-    def _CalculateDOWDelta(self, wd, wkdy, offset, style):
-        if style == 1:
-            if offset == 1:
-                diff = 6 - wd + wkdy + 1
-            elif offset == -1:
-                diff = wd - wkdy + 7
+    def _CalculateDOWDelta(self, wd, wkdy, offset, style, currentDayStyle):
+        if offset == 1:
+            # modifier is indicating future week eg: "next". 
+            # DOW is calculated as DOW of next week
+            diff = 7 - wd + wkdy
+        
+        elif offset == -1:
+            # modifier is indicating past week eg: "last","previous" 
+            # DOW is calculated as DOW of previous week
+            diff = wkdy - wd - 7
+        
+        elif offset == 0:
+            # modifier is indiacting current week eg: "this"
+            # DOW is calculated as DOW of this week
+            diff = wkdy - wd
+        
+        elif offset == 2:
+            # no modifier is present. 
+            # i.e. string to be parsed is just DOW
+            
+            if style == 1:
+            # next occurance of the DOW is calculated
+                if currentDayStyle == True:
+                    if wkdy >= wd:
+                        diff = wkdy - wd
+                    else:
+                        diff = 7 - wd + wkdy
+                else:
+                    if wkdy > wd:
+                        diff = wkdy - wd
+                    else:
+                        diff = 7 - wd + wkdy
+            
+            elif style == -1:
+                # last occurance of the DOW is calculated
+                if currentDayStyle == True:
+                    if wkdy <= wd:
+                        diff = wkdy - wd
+                    else:
+                        diff = wkdy - wd - 7
+                else:
+                    if wkdy < wd:
+                        diff = wkdy - wd
+                    else:
+                        diff = wkdy - wd - 7
             else:
+                # occurance of the DOW in the current week is calculated
                 diff = wkdy - wd
-        elif style == -1:
-            if offset == 1:
-                diff = 6 - wd + wkdy + 1
-            elif offset == -1:
-                diff = wd - wkdy + 7
-            else:
-                diff = wkdy - wd
-        else:
-            if offset == 1:
-                diff = 6 - wd + wkdy + 1
-            elif offset == -1:
-                diff = wd - wkdy + 7
-            else:
-                diff = wkdy - wd
-
+                        
         print "wd %s, wkdy %s, offset %d, style %d\n" % (wd, wkdy, offset, style)
 
         return diff
@@ -763,7 +789,7 @@ class Calendar:
 
                 else:
                     wkdy       = self.ptc.WeekdayOffsets[wkdy]
-                    diff       = self._CalculateDOWDelta(wd, wkdy, offset, self.ptc.DOWParseStyle)
+                    diff       = self._CalculateDOWDelta(wd, wkdy, offset, self.ptc.DOWParseStyle, self.ptc.CurrentDOWParseStyle)
                     start      = datetime.datetime(yr, mth, dy, 9, 0, 0)
                     target     = start + datetime.timedelta(days=diff)
                     sourceTime = target.timetuple()
@@ -991,11 +1017,9 @@ class Calendar:
             wkdy  = self.ptc.WeekdayOffsets[s]
 
             if wkdy > wd:
-                #qty    = wkdy - wd
-                qty = self._CalculateDOWDelta(wd, wkdy, 0, self.ptc.DOWParseStyle)
+                qty = self._CalculateDOWDelta(wd, wkdy, 2, self.ptc.DOWParseStyle,self.ptc.CurrentDOWParseStyle)
             else:
-                #qty    = 6 - wd + wkdy + 1
-                qty = self._CalculateDOWDelta(wd, wkdy, 1, self.ptc.DOWParseStyle)
+                qty = self._CalculateDOWDelta(wd, wkdy, 2, self.ptc.DOWParseStyle,self.ptc.CurrentDOWParseStyle)
 
             target = start + datetime.timedelta(days=qty)
             wd     = wkdy
